--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "bitcoin-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shaniKupiec.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "react-sparklines": "^1.7.0",
     "sass": "^1.50.0",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
