--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "bitcoin-app",
+  "name": "mister-bitcoin",
+  "homepage": "https://shaniKupiec.github.io/Bitcoin-App",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shaniKupiec.github.io/Bitcoin-App",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "gh-pages": "^3.2.3",
+    "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
@@ -18,16 +20,15 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.0",
-    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
