--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "chart.js": "^4.1.1",
     "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.0.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.0",
