--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Cryptobits",
-  "homepage": "https://shaniKupiec.github.io",
+  "homepage": "https://shaniKupiec.github.io/Cryptbits-React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "chart.js": "^4.1.1",
-    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.1.0",
@@ -49,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
