--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Cryptobits",
-  "homepage": "https://shaniKupiec.github.io/Cryptbits-React",
+  "homepage": "http://www.cryptbits.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
